@@ -1,10 +1,0 @@
-## SECTION=middleware
-config DBUS_GLIB
-	tristate
-	prompt "dbus glib bindings"
-	select DBUS
-	select HOST_DBUS_GLIB
-	select GLIB
-	select EXPAT
-	help
-	  dbus bindings, based on glib
